[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/GUI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://resrc/Bold 32.tres" type="DynamicFont" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButtons" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -3.0
margin_bottom = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuButtons"]
margin_left = 635.0
margin_top = 327.0
margin_right = 965.0
margin_bottom = 523.0

[node name="Label" type="Label" parent="MainMenuButtons/VBoxContainer"]
margin_right = 330.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 2 )
text = "Simple Space Strategy"

[node name="MarginContainer" type="MarginContainer" parent="MainMenuButtons/VBoxContainer"]
margin_top = 37.0
margin_right = 330.0
margin_bottom = 67.0
rect_min_size = Vector2( 0, 30 )

[node name="ContinueGameButton" type="Button" parent="MainMenuButtons/VBoxContainer"]
visible = false
margin_top = 18.0
margin_right = 140.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 2 )
text = "Continue"

[node name="NewGameButton" type="Button" parent="MainMenuButtons/VBoxContainer"]
margin_top = 71.0
margin_right = 330.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 2 )
text = "New Game"

[node name="LoadGameButton" type="Button" parent="MainMenuButtons/VBoxContainer"]
visible = false
margin_top = 80.0
margin_right = 330.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
text = "Load Game"

[node name="SaveGameButton" type="Button" parent="MainMenuButtons/VBoxContainer"]
visible = false
margin_top = 66.0
margin_right = 140.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 2 )
text = "Save Game"

[node name="GameSettingsButton" type="Button" parent="MainMenuButtons/VBoxContainer"]
margin_top = 114.0
margin_right = 330.0
margin_bottom = 153.0
custom_fonts/font = ExtResource( 2 )
text = "Settings"

[node name="QuitGameButton" type="Button" parent="MainMenuButtons/VBoxContainer"]
margin_top = 157.0
margin_right = 330.0
margin_bottom = 196.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"
[connection signal="pressed" from="MainMenuButtons/VBoxContainer/ContinueGameButton" to="." method="_on_ContinueGameButton_pressed"]
[connection signal="pressed" from="MainMenuButtons/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MainMenuButtons/VBoxContainer/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="MainMenuButtons/VBoxContainer/SaveGameButton" to="." method="_on_SaveGameButton_pressed"]
[connection signal="pressed" from="MainMenuButtons/VBoxContainer/GameSettingsButton" to="." method="_on_GameSettingsButton_pressed"]
[connection signal="pressed" from="MainMenuButtons/VBoxContainer/QuitGameButton" to="." method="_on_QuitGameButton_pressed"]
